# gemmi_tools

./: .gitignore
gemmi_tools/: CMakeLists.txt
gemmi_tools/gemmi_tools/: CMakeLists.txt  gemmi_tools.cpp  gemmi_tools.h
gemmi_tools/include/gemmi_tools/: sample.hpp
gemmi_tools/python/: sample.cpp
gemmi_tools/src/: sample.cpp
