# CMakeList.txt : CMake project for gemmi_tools, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
# add_executable (gemmi_tools "gemmi_tools.cpp" "gemmi_tools.h")

# TODO: Add tests and install targets if needed.
